<resources>
    <string name="app_name">Besok Minggu</string>
    <string name="title_home">Home</string>
    <string name="title_profile">Profile</string>
    <string name="title_library">Your Library</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Log In</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >=8 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_new_songs">New songs</string>
    <string name="title_chart">Chart</string>
    <string name="cover_image">Song cover image</string>
    <string name="recently_played">Recently played</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="song_title">Song Name</string>
    <string name="search">Search for songs…</string>
    <string name="listened">LISTENED</string>
    <string name="liked">LIKED</string>
    <string name="total_songs">SONGS</string>
    <string name="background_login">background_login</string>
    <string name="millions_of_songs_only_on_purritify">Millions of Songs. Only on Purritify.</string>
    <string name="queue_icon">queue_icon</string>
    <string name="logo">logo</string>
    <string name="delete_song">delete_song</string>
    <string name="upload_photo">Upload Photo</string>
    <string name="image_icon">image_icon</string>
    <string name="square_white">square_white</string>
    <string name="upload_file">Upload File</string>
    <string name="title">Title</string>
    <string name="artist">Artist</string>
    <string name="upload_song">Upload Song</string>
    <string name="artist_name">Artist Name</string>
    <string name="desc_top_global">Your daily update of the most played tracks right now - Global.</string>
    <string name="desc_top_local">Your daily update of the most played tracks right now - Local.</string>
    <string name="top_global">Top Global</string>
    <string name="top_local">Top Local</string>
    <string name="download_icon">download_icon</string>
    <string name="download_song">Download Song</string>
    <string name="back">back</string>
    <string name="your_sound_capsule">Your Sound Capsule</string>
    <string name="detail_button">Detail Button</string>
    <string name="share_button">Share Button</string>
    <string name="time_listened">Time listened</string>
    <string name="top_artist">Top Artist</string>
    <string name="top_song">Top Song</string>
    <string name="take_photo">Take Photo</string>
    <string name="select_from_gallery">Select from gallery</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="playback_channel_name">Playback Controls</string>
    <string name="playback_channel_description">Media playback controls</string>
    <string name="playback_channel_desc">CHANNEL_DESC</string>

    <string name="share_icon">Share Icon</string>
    <string name="share_song">Share Song</string>
    <string name="share_qr_code">Share QR Code</string>
    <string name="other">Other</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>