<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@color/primary">

    <!-- Drag Handle -->
    <View
        android:id="@+id/dragHandle"
        android:layout_width="80dp"
        android:layout_height="6dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="6dp"
    android:background="@drawable/drag_handle_icon"/>

    <!-- Upload Song Label -->
    <TextView
        android:id="@+id/uploadSongLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_song"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintTop_toBottomOf="@id/dragHandle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:gravity="center"/>

    <!--  Upload Container  -->
    <LinearLayout
        android:id="@+id/uploadContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintTop_toBottomOf="@id/uploadSongLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Upload Photo -->
        <FrameLayout
            android:id="@+id/uploadPhoto"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/dotted_square"
            android:layout_marginEnd="30dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/uploadPhotoLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_photo"
                    android:textColor="#888888"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    />

                <ImageView
                    android:id="@+id/uploadPhotoIcon"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:contentDescription="@string/image_icon"
                    android:src="@drawable/image_icon"/>
            </LinearLayout>

            <!-- <ImageView
                android:id="@+id/editPhotoIndicator"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="6dp"
                android:background="@drawable/square_white"
                android:contentDescription="@string/square_white"
                android:padding="4dp"
                android:src="@drawable/edit_icon"/> -->
        </FrameLayout>

        <!-- Upload File -->
        <FrameLayout
            android:id="@+id/uploadFile"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:background="@drawable/dotted_square">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                tools:ignore="UseCompoundDrawables">

                <TextView
                    android:id="@+id/uploadFileLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upload_file"
                    android:textColor="#888888"
                    android:textSize="14sp"
                    android:fontFamily="@font/poppins"
                    />

                <ImageView
                    android:id="@+id/uploadFileIcon"
                    android:layout_width="84dp"
                    android:layout_height="84dp"
                    android:contentDescription="@string/upload_file"
                    android:src="@drawable/upload_song_icon"/>
            </LinearLayout>

            <!-- <ImageView
                android:id="@+id/editFileIndicator"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="bottom|end"
                android:layout_margin="6dp"
                android:background="@drawable/square_white"
                android:contentDescription="@string/square_white"
                android:padding="4dp"
                android:src="@drawable/edit_icon"/> -->
        </FrameLayout>

    </LinearLayout>

    <!-- Title Label -->
    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintTop_toBottomOf="@id/uploadContainer"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <!-- Title Input -->
    <EditText
        android:id="@+id/titleEdit"
        style="@style/EditTextStyle"
        android:autofillHints="Your Song Title"
        android:background="@drawable/background_input"
        android:elegantTextHeight="true"
        android:fontFamily="@font/poppins"
        android:gravity="center_vertical|fill_vertical"
        android:paddingHorizontal="15dp"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/song_title"
        android:textColor="@android:color/white"
        android:textColorHint="#AAAAAA"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/titleLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:height="48dp"/>

    <!-- Artist Label -->
    <TextView
        android:id="@+id/artistLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artist"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:fontFamily="@font/poppinsmedium"
        app:layout_constraintTop_toBottomOf="@id/titleEdit"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"/>

    <!-- Artist Input -->
    <EditText
        android:id="@+id/artistEdit"
        style="@style/EditTextStyle"
        android:gravity="center_vertical|fill_vertical"
        android:autofillHints="Artist Name"
        android:background="@drawable/background_input"
        android:elegantTextHeight="true"
        android:paddingHorizontal="15dp"
        android:fontFamily="@font/poppins"
        android:paddingVertical="10dp"
        android:selectAllOnFocus="true"
        android:textSize="17sp"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/artist_name"
        android:textColor="@android:color/white"
        android:textColorHint="#AAAAAA"
        android:inputType="text"
        android:maxLines="1"
        app:layout_constraintTop_toBottomOf="@id/artistLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="4dp"
        android:height="48dp"/>

    <!-- Cancel Button -->
    <Button
        android:id="@+id/cancelButton"
        android:layout_gravity="center"
        android:background="@drawable/background_button"
        android:backgroundTint="#888888"
        android:enabled="true"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/enable_selector"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/artistEdit"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        android:layout_marginTop="24dp"
        />

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_gravity="center"
        android:background="@drawable/background_button"
        android:backgroundTint="@color/button_selector"
        android:enabled="true"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="#000000"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textAllCaps="false"
        android:layout_marginStart="8dp"
        app:layout_constraintTop_toTopOf="@id/cancelButton"
        app:layout_constraintStart_toEndOf="@id/cancelButton"
        app:layout_constraintEnd_toEndOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
