<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    android:background="@color/primary"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:id="@+id/tvTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingHorizontal="16dp"
        android:paddingTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvChart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppinsmedium"
            android:text="@string/title_chart"
            android:textColor="@color/white"
            android:textSize="22sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/qrButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:background="@color/transparent"
            android:src="@drawable/qr"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/Chart"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:padding="16dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/topGlobal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/top_global"
                android:scaleType="fitCenter"
                android:src="@drawable/cover_top_global" />

            <TextView
                android:id="@+id/descTopGlobal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppinsmedium"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/desc_top_global"
                android:textColor="@color/gray"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>

        <Space
            android:layout_width="8dp"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageButton
                android:id="@+id/topLocal"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/top_local"
                android:scaleType="fitCenter"
                android:src="@drawable/cover_top_local" />

            <TextView
                android:id="@+id/descTopLocal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:ellipsize="end"
                android:fontFamily="@font/poppinsmedium"
                android:lines="2"
                android:maxLines="2"
                android:text="@string/desc_top_local"
                android:textColor="@color/gray"
                android:textSize="10sp"
                tools:ignore="SmallSp" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/tvNewSongs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/title_new_songs"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Chart" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvNewSongs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvNewSongs">

    </androidx.recyclerview.widget.RecyclerView>

    <TextView
        android:id="@+id/tvRecentlyPlayed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="@string/recently_played"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvNewSongs" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvRecentlyPlayed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvRecentlyPlayed" />

    <TextView
        android:id="@+id/tvDailyPlaylist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppinsmedium"
        android:text="Daily Playlist"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rvRecentlyPlayed" />

    <TextView
        android:id="@+id/tvDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/poppinsmedium"
        android:textColor="@color/gray"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDailyPlaylist" />

    <LinearLayout
        android:id="@+id/dailyPlaylistBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDuration">

        <ImageButton
            android:id="@+id/dailyPlaylistImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="Daily Playlist"
            android:scaleType="fitCenter"
            android:src="@drawable/cover_daylist" />

        <TextView
            android:id="@+id/dailyPlaylistDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ellipsize="end"
            android:fontFamily="@font/poppinsmedium"
            android:lines="2"
            android:maxLines="2"
            android:text="Your daily update of curated songs"
            android:textColor="@color/gray"
            android:textSize="10sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>